# micro-bacnet-bridge

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  pages.yml  release.yml
bridge-core/: Cargo.toml  build.rs
bridge-core/csrc/: bacnet_test_harness.c
bridge-core/src/: apdu.rs  auth.rs  bacnet.rs  bridge.rs  bvlc.rs  config.rs  dns_client.rs  error.rs  ipc.rs  lib.rs  mdns.rs  mqtt.rs  npdu.rs  ntp.rs  ota.rs  pipeline.rs  snmp.rs  syslog.rs  tls.rs
csrc/: bacnet_bridge.h  bacnet_port.c  core1_entry.c  ipc_c.c  mstp_port.c  platform_rp2350.h
csrc/newlib-stubs/: math.h  stdio.h  stdlib.h  string.h
docs/: openapi.yaml
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: bacnet_ffi.rs  bacnet_ip.rs  bacnet_router.rs  bridge.rs  config.rs  core1.rs  dns.rs  http.rs  ipc.rs  main.rs  mdns.rs  mqtt.rs  ntp.rs  ota.rs  platform.rs  snmp.rs  sse.rs  syslog.rs  web_assets.rs
frontend/: VERDANT_UI_REFERENCE.md  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: DeviceList.svelte  DeviceSidebar.svelte  PointsPanel.svelte  api.ts  stores.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/events/: +server.ts
frontend/src/routes/config/: +page.svelte
frontend/src/routes/convertors/: +page.svelte
frontend/src/routes/firmware/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/points/: +page.svelte
frontend/src/routes/status/: +page.svelte
frontend/src/routes/tls/: +page.svelte
frontend/src/routes/tokens/: +page.svelte
frontend/src/routes/users/: +page.svelte
tools/: check_api_routes.sh  embed_assets.py  generate_docs.sh  pre-commit
