[package]
name = "bridge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
sha2 = { version = "0.10", default-features = false }
pem-rfc7468 = { version = "1.0", default-features = false }
