[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[features]
# Exactly one board feature must be selected at build time.
default = ["board-pico"]
## W5500-EVB-Pico-PoE — RP2040 (Cortex-M0+, 264 KB SRAM, 2 MB flash)
board-pico = ["embassy-rp/rp2040"]
## W5500-EVB-Pico2 — RP2350A (Cortex-M33, 520 KB SRAM, 4 MB flash)
board-pico2 = ["embassy-rp/rp235xa"]

[dependencies]
# Embassy runtime
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl"] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"

# Networking
embassy-net = { version = "0.8.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "multicast", "dns"] }
embassy-net-wiznet = "0.2.1"

# HAL traits
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"

# Cortex-M
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

# Static allocation and fixed-size collections
static_cell = "2.1.1"
heapless = "0.8"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }

# Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Serialisation (no_std)
serde-json-core = "0.6"

# Workspace crate
bridge-core = { path = "../bridge-core" }

[build-dependencies]
cc = "1.0"
